# Real-Time-Brain-Inspired-Video-Memory

./: .gitignore  README.md  benchmark_results.json  pyproject.toml  requirements.txt  results.json
config/: base_config.yaml  base_config_test.yaml  config_community_on_page_rank.yaml  plot_metrics.yaml
data/exports/: mvp_93e9c82e-95d6-4864-8ac1-2ae70edfd961.json
data/final_benchmarks/: mvp_93e9c82e-95d6-4864-8ac1-2ae70edfd961.json  sub_graph_4fd0a841-a1f1-4bee-9359-4a5982bc3df9.json
data/groundtruth/: question_grountruth_car.json  question_grountruth_car_wrapper.json  retrieval_offline.json  retrieval_schedule.json
data/images/: comparison_report.md
data/metrics/: injection_45e65247-e92a-48d0-a78a-f5267eb7a82b_batch_metrics_kg.json  mvp_93e9c82e-95d6-4864-8ac1-2ae70edfd961.json  mvp_retrieval_times_93e9c82e-95d6-4864-8ac1-2ae70edfd961_20251130T142405Z.json  non_injection_c9e3bb63-6754-4df9-9e87-3b305cca6e63_batch_metrics_kg.json  sub_graph_4fd0a841-a1f1-4bee-9359-4a5982bc3df9.json  sub_graph_retrieval_times_4fd0a841-a1f1-4bee-9359-4a5982bc3df9_20251130T142744Z.json
data/outputs/: benchmark_mvp_8679eaa5-1b21-4975-b7d6-c86e3a9c958d.json  benchmark_subgraph_injection_a29ebb6e-705d-4849-ba84-424b11ac2337.json  retrieval_mvp_8679eaa5-1b21-4975-b7d6-c86e3a9c958d.json  retrieval_results_offline.json  retrieval_subgraph_injection_a29ebb6e.json  vlm_output.json  vlm_output_chunks.json
docker/: docker-compose.yml  neo4j_init.cypher
scripts/: analyze_parameter_sweep.py  analyze_sweep_results.py  run_parameter_sweep.py  run_retrieval_sweep.py
src/cli/: main.py
(+27 files in other folders)
